# cajal-project15-spatial-brain

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  cluster_setup.sh  pixi.toml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yaml  test.yaml
analysis/: ML-2026-01-27_demo_scRNA_workflow.ipynb  XX-2026-01-27_sample_notebook.ipynb
analysis/level0/: 00_data_structures_solution.ipynb  00_data_structures_student.ipynb
analysis/level1/: 01_load_and_qc_student.ipynb  02_segmentation_and_metric_solution.ipynb  02_segmentation_and_metric_student.ipynb
analysis/level2/: 02a_cell_type_annotation_solution.ipynb  02a_cell_type_annotation_student.ipynb  02b_tissue_architecture_student.ipynb
analysis/level3/: 03_beyond_the_paper_solution.ipynb  03_beyond_the_paper_student.ipynb
data/example_dataset/: README.md
docs/: sif_rebuild_todo.md  teaching_outline.md
scripts/: build_pixi_env.sh  cluster_setup.sh  patch_kernel_env.py  rename_package.py  sif_pip.sh
scripts/sif/: README.md  build_sif.sbatch
scripts/sif/kernel/: kernel.json
src/myanalysis/: __init__.py  _constants.py  plotting.py
src/spatialbrain/: _constants.py
tests/: test_basic.py
